Funcionando, porém processos de IO concluído deveriam ficar na lista de prontos.